# slicer-core

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
examples/: example.cpp
include/: Plane.h  debug_export.h  infill.h  infill_grid.h  islands.h  lineSegment.h  multiSlice.h  offset.h  perimeters.h  sliceLayer.h  triangle.h  triangleMesh.h  v3.h  winding.h  winding_normalize.h
src/: debug_export.cpp  infill.cpp  infill_grid.cpp  islands.cpp  multiSlice.cpp  offset.cpp  perimeters.cpp  sliceLayer.cpp  triangle.cpp  triangleMesh.cpp  winding_normalize.cpp
tests/: CMakeLists.txt  test_debug_export.cpp  test_helpers.h  test_infill.cpp  test_islands.cpp  test_multiSlice.cpp  test_offset.cpp  test_perimeters.cpp  test_sliceLayer.cpp  test_slicing.cpp  test_triangle.cpp  test_triangleMesh.cpp  test_winding.cpp  test_winding_normalize.cpp
